<resources>
    <string name="app_name">Sensor</string>
    <string name="choose_sensor">Choose the sensor you want to test</string>
    <string name="Light_sensor">Light sensor</string>
    <string name="Magnetometre">Magnetometre</string>
    <string name="Barometre">Barometre</string>
    <string name="Magnet">Magnetometer says...</string>
    <string name="value">value : </string>
    <string name="textView4">result</string>
    <string name="valueBar">result</string>
    <string name="description">description</string>
    <string name="description">description</string>
    <string name="txt">bars</string>
</resources>
